[package]
name = "finance"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deflate = "0.8.3"
inflate = "0.4.5"
common = { path = "../common" }
tree-buf = { path="../../tree-buf/tree-buf" }
csv = "1.1"
serde = { version="1.0.105", features = ["derive"] }
flame = "0.2.2"