[package]
name = "finance"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deflate = "0.8.3"
inflate = "0.4.5"
common = { path = "../common" }
tree-buf = "0.9.0"
csv = "1.1"
serde = { version="1.0.105", features = ["derive"] }
firestorm = "0.2.0"