[package]
name = "tree-buf-benches"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-buf = "0.9.0"
common = { path="../common" }
geojson = "0.17.0"
serde_json = "1.0.48"
firestorm = "0.2.0"
#firestorm = {version = "0.2.0", features = ["enabled"] }