[package]
name = "graphql"
version = "0.1.0"
authors = ["Zac Burns <That3Percent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.105", features = ["derive"] }
serde_json = "1.0.48"
rmp-serde = "0.14.3"
common = { path = "../common" }
#tree-buf = { path="../../tree-buf/tree-buf" }
tree-buf = "0.9.0"
hex = "0.4.2"
#firestorm = { version="0.2.0", features=["enabled"] }
firestorm = { version="0.2.0" }